force-app/main/default/objects/STG_Customer__c/STG_Customer__c.object-meta.xml
<CustomObject>
    <label>Staging Customer</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>STG Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>