force-app/main/default/objects/STG_Customer__c/fields/ABC_Cust_Id__c.field-meta.xml
<CustomField>
    <fullName>ABC_Cust_Id__c</fullName>
    <label>ABC Cust Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>