force-app/main/default/objects/STG_Customer__c/fields/B2C_Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>B2C_Customer_Phone__c</fullName>
    <label>B2C Customer Phone</label>
    <type>Phone</type>
</CustomField>