force-app/main/default/objects/STG_Customer__c/fields/B2C_First_Name__c.field-meta.xml
<CustomField>
    <fullName>B2C_First_Name__c</fullName>
    <label>B2C First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>