force-app/main/default/objects/STG_Customer__c/fields/Customer_Since__c.field-meta.xml
<CustomField>
    <fullName>Customer_Since__c</fullName>
    <label>Customer Since</label>
    <type>DateTime</type>
</CustomField>