force-app/main/default/objects/STG_Customer__c/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABHFL</fullName>
            </value>
            <value>
                <fullName>ABFL</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>ABCD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>