force-app/main/default/objects/STG_Customer__c/fields/PAN_No__c.field-meta.xml
<CustomField>
    <fullName>PAN_No__c</fullName>
    <label>PAN No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>