force-app/main/default/objects/STG_Customer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Type__c</columns>
    <columns>Line_of_Business__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>